# bay-area-job-hunter

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: daily_job_hunt.yml
config/: companies.yaml  scoring.yaml  search_queries.yaml
data/: jobs.db
src/: deduplicator.py  digest.py  enricher.py  filter.py  llm_scorer.py  main.py  scorer.py  scraper.py  storage.py
templates/: digest_email.html
tests/: test_deduplicator.py  test_filter.py  test_scorer.py
